5.0.0 -> 5.1a1:
    - jbj: "+bing": fix: check for glob'd directory roots before traversing.
    - jbj: rpmio: rescuscitate tglob.c.
    - jbj: rpmio: rescuscitate tdir.c.
    - jbj: rpmio: fix: cvtfmode access beyond end-of-string with "r" fmode.
    - jbj: rpmio: rescuscitate tget.c.
    - jbj: fix: (again) rpmtsCheck() needs to return 1 when problems exist.
    - jbj: install rpmcache in bindir, not pkglibdir.
    - jbj: fix: Fopen: heh, I swear I had a rpmExpand() on fmode somewhen ...
    - jbj: rpm.spec: nuke the xar.1 man page.
    - jbj: rpmrpc: split stat(2) prints so valgrind can detect uninitialized.
    - jbj: rpmcache: fix: don't check fo ".i386" suffix if name is too short.
    - jbj: rpmcache: use file:///, not clunkier file://localhost/, url.
    - jbj: rpmcache: add --cache opt-in, rather than --nocache opt-out, for now.
    - proyvind: add sparcv9v2 (Niagara 2) architecture
    - proyvind: add arch macros for alpha and sparc
    - afb: workaround for "uuid_t" type conflict, between <unistd.h> and "uuid.h"
    - jbj: fix: python: re-add rpm.archscore() for smart depsolving usage.
    - jbj: test for POPT earlier to avoid popt being blamed for neon configure failures.
    - jbj: add --with-uuid=external, --with-pcre=external to devtool "system".
    - rse: ensure that RPM Lua function util.rsplit("", ...) returns an empty table
    - jbj: "+bing" -- handle no *.rpm package found condition correctly.
    - jbj: "+bing" -- limit Fts(3) recursion to target directory traversal only.
    - jbj: "+bing" -- define "%NEVRA bing" on-the-fly for use by glob patterns.
    - jbj: "+bing" -- permit colon separated glob directory patterns.
    - jbj: macro.c: include rpmuuid.h to remove warning.
    - jbj: macro.c: add %{!?load:...} syntax, display error if %{load:...} fails.
    - jbj: updated sv.po (Translation Project).
    - jbj: fix: permit #%patchN comments by forcing single line expansion.